feat: implement custom file logger

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,24 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
-    },
-    "File": {
-      "MaxFileSize": 10485760,
-      "FormatterOptions": {
-        "SingleLine": true,
-        "IncludeScopes": true,
-        "TimestampFormat": "HH:mm:ss ",
-        "UseUtcTimestamp": true,
-        "JsonWriterOptions": {
-          "Indented": true
-        }
-      },
-      "Files": [
-        {
-          "Path": "log-<counter>.txt"
-        }
-      ]
+      "Default": "Information",
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   }
 }
